--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+
+}
+
+.main-logo {
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+}
+.nav {
+  text-align: center;
+}
+
+.nav ul {
+  display: inline-block;
+  text-align: left;
+}
+
+.main-img {
+  width: 400px;
+  height: auto;
 }
